# linksawakening-portable

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  rom.h  rom_main.c
android/: build.gradle  gradle.properties
android/app/: build.gradle
android/app/jni/src/: CMakeLists.txt  android_main.c
android/app/src/main/res/values/: strings.xml
cmake/: toolchain-libxenon.cmake  toolchain-ps4.cmake
cmake/test/: 3ds_probe.sh  build_3ds.sh  build_android.ps1  build_dreamcast.sh  build_gamecube.sh  build_hello.sh  build_hello_xenia.sh  build_libxenon.sh  build_platform_test_xenon.sh  build_ps2.sh  build_ps3.sh  build_ps4.sh  build_psp.sh  build_runtime_xenon.sh  build_vita.sh  build_wasm.sh  build_wii.sh  build_xbox.sh  fetch_libssl11.sh  hello_xenon.c  package_ps4.sh  platform_libxenon_test.c  ps4_input_probe.sh  ps4_libssl_probe.sh  ps4_pkgtool_probe.sh  ps4_probe.sh  ps4_sdl_probe.sh  wasm_console.ps1  wasm_funcsizes.py  wasm_shell.html  wii_probe.sh
docs/: BUILDING.md  ENDIAN_AUDIT.md  PAL_AUDIT.md  PORTING.md
runtime/: CMakeLists.txt  LICENSE
runtime/include/: gbrt.h  hwtrace.h  platform_sdl.h  ppu.h
runtime/src/: asset_viewer.cpp  asset_viewer.h  asset_viewer_stubs.c  audio.c  gbrt.c  hwtrace.c  interpreter.c  menu_gui.cpp  menu_gui.h  menu_gui_stubs.c  platform_3ds.c  platform_dreamcast.c  platform_gamecube.c  platform_libxenon.c  platform_ps2.c  platform_psl1ght.c  platform_psp.c  platform_sdl.cpp  platform_vita.c  platform_wii.c  ppu.c
runtime/src/multiplayer/: mp_color.cpp  mp_color.h  mp_delta.cpp  mp_delta.h  mp_indicators.cpp  mp_indicators.h  mp_integration.h  mp_menu.cpp  mp_menu.h  mp_net.cpp  mp_net.h  mp_protocol.h  mp_pvp.cpp  mp_pvp.h  mp_session.cpp  mp_session.h  mp_sprites.cpp  mp_sprites.h  mp_trade.cpp  mp_trade.h  mp_voice.cpp  mp_voice.h  mp_worldsync.cpp  mp_worldsync.h
tools/: CMakeLists.txt  README.md  compare_hw_trace.py  sb_tracer.c
xbox/: Makefile
